test/fixtures/fixtures/type-error/badReturnType.lys.ast.desugar
|-Document(0,23)
  |-FunctionDirective(0,23)
    |-Decorators(0,0)
      <Rule0>
    |-FunDeclaration(0,23)
      |-FunctionName(4,8)
        |-NameIdentifier(4,8)
          |-Identifier=test
      |-TypeParameters(8,8)
        <Rule0>
      |-FunctionParamsList(8,10)
        |-(List)(9,9)
          <Rule0>
      |-ReturnType(10,16)
        |-Reference(12,15)
          |-QName(12,15)
            |-NameIdentifier(12,15)
              |-Identifier=f32
      |-FunctionBody(16,23)
        |-BooleanLiteral(18,23)
          <Rule0>
  |-EndOfFile=